# jellyfin-channel-mapper

./: README.md  pyproject.toml
jellyfin_channel_mapper/: __init__.py
jellyfin_channel_mapper/jellyfin/: api.py  auth.py  channel_mappings.py
