[tool.poetry]
name = "jellyfin-channel-mapper"
version = "0.1.0"
description = ""
authors = ["Jesus Trujillo <elyeyus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
thefuzz = "^0.22.1"
prompt-toolkit = "^3.0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
